--- a/assets/backend/css/admin.css
+++ b/assets/backend/css/admin.css
@@ -4752,25 +4752,7 @@ span.oxi-confirmation-success:after {
     font-size: 28px;
     vertical-align: middle;
 }
-
-#oxi-addons-style-change-modal .modal-body .form-group{
-    width: 100%;
+.oxi-addons-web-template-image{
+    max-width: 100%;
+    width: auto;
 }
-#oxi-addons-modal-web-template.modal.fade.show{
-    z-index: 99999;
-}
-#oxi-addons-modal-web-template.modal.fade.show .modal-dialog.modal-xl{
-    max-width: 1340px;
-}
-#oxi-addons-modal-web-template.modal.fade.show .modal-dialog.modal-xl .modal-body{
-    padding: 0rem;
-}
-
-iframe#oxi-addons-custom-web-template {
-    display: block;       /* iframes are inline by default */
-    background: #000;
-    border: none;         /* Reset default border */
-    height: 85vh;        /* Viewport-relative units */
-    width: 100vw;
-}
-
